# triton-int8-inference

./: .gitignore  README.md  pyproject.toml
benchmarks/: baseline.py  block_bench.py
benchmarks/results/: attention.json
kernels/: quant_linear.py
models/: mini_block.py
profiler/: mini_block_trace.json  profile_block.py
